--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>&#40;주&#41;폴리큐브 인트라넷</title>
+    <title>인트라넷</title>
     <link href="asset/fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
@@ -34,7 +33,7 @@
             <div class="loginWrap">
                 <div class="loginTitle">
                     <h3>LOGIN</h3>
-                    <p>(주)폴리큐브 직원들을 위한 인트라넷 입니다.<br/>계정이 없으신 분은 인트라넷 관리자에게 문의하여 주시기 바랍니다.</p>
+                    <p> 직원들을 위한 인트라넷 입니다.<br/>계정이 없으신 분은 인트라넷 관리자에게 문의하여 주시기 바랍니다.</p>
                 </div><!--lg_form-->
                 <div>
                     <form form name="form1" method="post" action="index.php" class="clearfix">
@@ -54,7 +53,7 @@
                         </div>        
                     </form>
                     <div class="_copy">
-                        © 2018 POLYCUBE. All Rights Reserved.
+                        © 2021. All Rights Reserved.
                     </div>
                 </div>
             </div>
